# LearningLinuxKernel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/GreatestCommonDivisor/: CMakeLists.txt  gcdmain.cpp  gcdutils.cpp  gcdutils.h  ioctlgcdmain.cpp  sysfsgcdmain.cpp
Applications/GreatestCommonDivisor/Common/: gcdloaderimpl.cpp  gcdloaderimpl.h  gcdparser.h
Applications/GreatestCommonDivisor/GCD/: gcdcore.cpp  gcdloader.cpp  gcdloader.h  gcdparser.cpp  gcdutils.cpp  gcdutils.h
Applications/GreatestCommonDivisor/IOCTL_GCD/: ioctlgcdcore.cpp  ioctlgcdcore.h  ioctlgcdloader.cpp  ioctlgcdloader.h
Applications/GreatestCommonDivisor/SYSFS_GCD/: sysfsgcdcore.cpp  sysfsgcdloader.cpp  sysfsgcdloader.h
KernelModules/: CMakeLists.txt
KernelModules/Average/: CMakeLists.txt  Makefile
KernelModules/Average/include/Common/: average_utilities.h
KernelModules/Average/source/Common/: average_exit.c  average_utilities.c
KernelModules/Average/source/V1/: average_init.c
KernelModules/Average/source/V2/: average_init.c
KernelModules/Average/src/: average1_init.c  average2_init.c
KernelModules/CMakeUtils/: copyoutput.cmake  customcleantarget.cmake  customtarget.cmake  make.cmake  makeclean.cmake
KernelModules/Division/: CMakeLists.txt  Makefile  division.c  division_main.c
KernelModules/Division/include/: division_impl.h
KernelModules/Division/source/: division_impl.c  division_main.c
KernelModules/Division/src/: division_impl.c
KernelModules/IoctlDivision/: CMakeLists.txt  Makefile
KernelModules/IoctlDivision/include/: ioctl_division_impl.h
KernelModules/IoctlDivision/source/: ioctl_division_impl.c  ioctl_division_main.c
KernelModules/IoctlStringOps/: CMakeLists.txt  Makefile  ioctl_string_ops.c
KernelModules/IoctlStringOps/include/: ioctl_string_ops_impl.h
KernelModules/IoctlStringOps/source/: ioctl_string_ops_impl.c  ioctl_string_ops_main.c
KernelModules/KernelUtilities/: CMakeLists.txt  Makefile  kernel_utilities.c  kernelutilities.c  trim_and_copy_string.h
KernelModules/Mapping/: CMakeLists.txt  Makefile
KernelModules/Mapping/include/: mapping_impl.h  mapping_utils.h
KernelModules/Mapping/source/: mapping_impl.c  mapping_main.c  mapping_utils.c
KernelModules/MinMax/: CMakeLists.txt  Makefile
KernelModules/StringOps/: CMakeLists.txt  Makefile  string_ops.c
KernelModules/StringOps/include/: string_ops_impl.h
KernelModules/StringOps/source/: string_ops_impl.c  string_ops_main.c
Modules/Average/: average1_init.c  average2_init.c  average_exit.c  common.c  utilities.c
Modules/Division/: Makefile
Modules/MinMax/: minMax.c
Tests/: CMakeLists.txt  runalltests.sh  testutils.cpp  testutils.h  tst_ioctlstringopsmoduletests.cpp  tst_mappingmoduletests.cpp  tst_stringopsmoduletests.cpp
Utilities/: CMakeLists.txt  utilities.cpp  utilities.h  utilities_global.h  utils.cpp  utils.h
